# Backtesting-agent

./: ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
algo_trading/backtester/src/: backtest.rs  main.rs
algo_trading/configurator/: Cargo.toml
algo_trading/configurator/src/: directory.rs  main.rs  misc.rs  schema.rs  theme.rs
