[package]
name = "configurator"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2021"

[dependencies]
cursive = { version = "0.20", default-features = false, features = ["termion-backend"] }
serde_json = "1.0"
termion = "2.0"
once_cell = "1.18"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
